change startup links to design.hellovelocity.com

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,7 +122,7 @@
 	  	<div class="<% if (mobile != "true") { %> col-xs-6 <% } %> hv-half-page">
 	  		<div class="hv-content-container">
 	  			<span class="h1" style="color:#333;">
-	  				<a href="http://startups.hellovelocity.com">
+	  				<a href="http://design.hellovelocity.com">
 	  					<span style="color:blue;<% if (mobile == "true") { %> text-decoration: underline; <% } %>">Hello Velocity Design</span>
 	  				</a>
 	  				<br>
