--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,6 +48,7 @@ body {
   width: 1px;
   height: 1px;
   background-color: blue;
+  display: none;
   /*z-index: 1000;*/
 }
 .hv-cursor-arrows,
@@ -87,6 +88,9 @@ body {
   background-color: white; 
 }
 
+.hv-page a {
+  cursor: default;
+}
 
 
 
