mobile event tracking

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,7 +95,7 @@
 	  	<div class="<% if (mobile != "true") { %> col-xs-6 <% } %> hv-half-page hv-half-page-top">
 	  		<div class="hv-content-container">
 	  			<span class="h1" style="color:#333;">
-	  				<span style="color:blue;<% if (mobile == "true") { %> text-decoration: underline; <% } %>">Hello Velocity Lab</span>
+	  				<span id="lab-link" style="color:blue;<% if (mobile == "true") { %> text-decoration: underline; <% } %>">Hello Velocity Lab</span>
 	  				<br>
 	  				experiments with 
 	  				<br>
@@ -120,7 +120,7 @@
 	  	<div class="<% if (mobile != "true") { %> col-xs-6 <% } %> hv-half-page">
 	  		<div class="hv-content-container">
 	  			<span class="h1" style="color:#333;">
-	  				<span style="color:blue;<% if (mobile == "true") { %> text-decoration: underline; <% } %>">Hello Velocity Design</span>
+	  				<span id="design-link" style="color:blue;<% if (mobile == "true") { %> text-decoration: underline; <% } %>">Hello Velocity Design</span>
 	  				<br>
 	  				builds powerful	
 	  				<br>
